--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <title>FlowXL</title>
+
+
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
+<link rel=stylesheet type=text/css href="{{ url_for('static', filename='vendor/bootstrap-3.3.2-dist/css/bootstrap.min.css') }}">
 
 <div class=page>
 	<h1>FlowXL</h1>
