--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,6 +5,9 @@
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='vendor/bootstrap-3.3.2-dist/css/bootstrap.min.css') }}">
 
+<script src="{{ url_for('static', filename='vendor/lodash-3.3.0/lodash.js') }}"></script>
+<script src="{{ url_for('static', filename='js/flowXL_base.js') }}"></script>
+
 <div class=page>
       <nav class="navbar navbar-inverse navbar-fixed-top">
           <div class="container">
