More work on updating for fileupload widget

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,8 +5,15 @@
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='vendor/bootstrap-3.3.2-dist/css/bootstrap.min.css') }}">
 
+<!-- TODO: These should only appear in the headers for those pages with the jQuery File Upload Widget -->
+<link rel=stylesheet href="{{ url_for('static', filename = 'vendor/jQuery-File-Upload-9.9.3/css/jquery.fileupload.css') }}">
+<link rel=stylesheet href="{{ url_for('static', filename = 'vendor/jQuery-File-Upload-9.9.3/css/jquery.fileupload-ui.css') }}">
+
 <script src="{{ url_for('static', filename='vendor/lodash-3.3.0/lodash.js') }}"></script>
 <script src="{{ url_for('static', filename='js/flowXL_base.js') }}"></script>
+
+
+
 
 <div class=page>
       <nav class="navbar navbar-inverse navbar-fixed-top">
