--- a/templates/upload_page.html
+++ b/templates/upload_page.html
@@ -4,7 +4,7 @@
 
 
 
-<h1>Hello world</h1>
+<h1>Job {{job_id}}</h1>
 
     <!-- The file upload form used as target for the file upload widget -->
     <form id="fileupload" action="//jquery-file-upload.appspot.com/" method="POST" enctype="multipart/form-data">
@@ -144,7 +144,8 @@
 <!-- The File Upload user interface plugin -->
 <script src="{{ url_for('static', filename='vendor/jQuery-File-Upload-9.9.3/js/jquery.fileupload-ui.js')}}"></script>
 <!-- The main application script -->
-<script src="{{ url_for('static', filename='vendor/jQuery-File-Upload-9.9.3/js/main.js')}}"></script>
+<!-- <script src="{{ url_for('static', filename='vendor/jQuery-File-Upload-9.9.3/js/main.js')}}"></script>
+-->
 <!-- <script src="/static/vendor/jQuery-File-Upload-9.9.3/js/main.js"></script>
 -->
 
@@ -152,7 +153,7 @@
 	$(function () {
 		'use strict';
 		$('#fileupload').fileupload({
-			url : 'api/1/jobs/5/upload'
+			url : '/api/1/jobs/{{job_id}}/upload'
 		});
 	});
 </script>
