Now provide default marker status
* Active markers now set server side so every marker has a state,
  when accessed by the /jobs/1 API

--- a/templates/upload_page.html
+++ b/templates/upload_page.html
@@ -2,9 +2,7 @@
 {% block body %}
 
 
-
-
-<h1>Job {{job_id}}</h1>
+<h1>Uploading Job {{job_id}}</h1>
 
 	<div class="panel panel-default">
 		<div class="panel-heading">
