After submission, user redirected to status page

--- a/templates/job_details.html
+++ b/templates/job_details.html
@@ -19,8 +19,17 @@
 		<div class="marker-table">
 			<div id="marker-table"></div>
 		</div>
-	</div>	
+	</div>
+	<div class="panel-body">
+		<a href="/">
+			<button type="button" class="btn btn-primary" id="new-job">
+				<span class="glyphicon glphyicon-play"></span>New Job
+			</button>	
+		</a>
+	</div>
 </div>
+
+
 
 <script>
     flowXL.jobDetails.init({{job_id}}, "job-status", 'marker-table');
